# SDL_kitchensink

./: CMakeLists.ns  CMakeLists.txt
src/: kitplayer.c
src/internal/: kitdecoder.c
src/internal/audio/: kitaudio.c
src/internal/video/: kitvideo.c
